--- a/templates/home.html
+++ b/templates/home.html
@@ -22,7 +22,7 @@
             <div class="form-group">
                 <label for="seq-two" class="col-md-2 control-label">Coordinate</label>
                 <div class="col-md-6">
-                    <input name="coord" class="form-control" id="seq2" placeholder="e.g. 12004883">
+                    <input name="coord" class="form-control" id="seq2" placeholder="e.g. 35280">
                 </div>
             </div>
             <div class="form-group">
