--- a/templates/result.html
+++ b/templates/result.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 <style>
+
+
 table {
     font-family: arial, sans-serif;
     border-collapse: collapse;
@@ -17,6 +19,31 @@ td, th {
 tr:nth-child(even) {
     background-color: #dddddd;
 }
+a {
+    text-decoration: none;
+    display: inline-block;
+    padding: 8px 16px;
+}
+
+a:hover {
+    background-color: #ddd;
+    color: black;
+}
+
+.previous {
+    background-color: #f1f1f1;
+    color: black;
+}
+
+.next {
+    background-color: #4CAF50;
+    color: white;
+}
+
+.round {
+    border-radius: 50%;
+}
+
 </style>
 </head>
    <body>
@@ -44,8 +71,9 @@ tr:nth-child(even) {
             </tr>
          {% endfor %}
       </table>
-      
       <a href = "/">Search Again</a>
-      
+      <a href="{{ url_for('result', chrom=chrom, start=start|int - 1) }}" class="previous">&laquo; Previous</a>
+      <a href="{{ url_for('result', chrom=chrom, start=start|int + 1) }}" class="next">Next &raquo;</a>
+          
    </body>
 </html>
